contrib/tree-sitter-gold/test/corpus/basics.txt
================================================================================
Integer literal
================================================================================

42

--------------------------------------------------------------------------------

(source_file
  (literal))

================================================================================
Float literal
================================================================================

3.14

--------------------------------------------------------------------------------

(source_file
  (literal))

================================================================================
Boolean literals
================================================================================

true

--------------------------------------------------------------------------------

(source_file
  (literal))

================================================================================
Null literal
================================================================================

null

--------------------------------------------------------------------------------

(source_file
  (literal))

================================================================================
Comment
================================================================================

# this is a comment
42

--------------------------------------------------------------------------------

(source_file
  (comment)
  (literal))

================================================================================
Simple string
================================================================================

"hello world"

--------------------------------------------------------------------------------

(source_file
  (string
    (string_raw)))

================================================================================
String interpolation - simple identifier
================================================================================

"hello $name"

--------------------------------------------------------------------------------

(source_file
  (string
    (string_raw)
    (string_interpolation
      (identifier))))

================================================================================
String interpolation - braced
================================================================================

"result = ${a + b}"

--------------------------------------------------------------------------------

(source_file
  (string
    (string_raw)
    (string_interpolation
      (binary_expr_add
        (identifier)
        (identifier)))))

================================================================================
String interpolation - format spec
================================================================================

"${n:.2f}"

--------------------------------------------------------------------------------

(source_file
  (string
    (string_interpolation
      (identifier)
      (format_spec))))

================================================================================
Let expression
================================================================================

let x = 1 in x

--------------------------------------------------------------------------------

(source_file
  (let_expr
    (identifier_binding (identifier))
    (literal)
    (identifier)))

================================================================================
Let expression - multiple bindings
================================================================================

let x = 1 let y = 2 in x + y

--------------------------------------------------------------------------------

(source_file
  (let_expr
    (identifier_binding (identifier))
    (literal)
    (identifier_binding (identifier))
    (literal)
    (binary_expr_add
      (identifier)
      (identifier))))

================================================================================
If expression
================================================================================

if x then 1 else 2

--------------------------------------------------------------------------------

(source_file
  (if_expr
    (identifier)
    (literal)
    (literal)))

================================================================================
Simple function
================================================================================

fn (x) x + 1

--------------------------------------------------------------------------------

(source_file
  (fn_expr
    (fn_paren_params
      (list_binding_entry
        (identifier_binding (identifier))))
    (binary_expr_add
      (identifier)
      (literal))))

================================================================================
Function with keyword params
================================================================================

fn (x; y = 0) x + y

--------------------------------------------------------------------------------

(source_file
  (fn_expr
    (fn_paren_params
      (list_binding_entry
        (identifier_binding (identifier)))
      (map_binding_entry
        (identifier)
        (literal)))
    (binary_expr_add
      (identifier)
      (identifier))))

================================================================================
Empty list
================================================================================

[]

--------------------------------------------------------------------------------

(source_file
  (list))

================================================================================
List with elements
================================================================================

[1, 2, 3]

--------------------------------------------------------------------------------

(source_file
  (list
    (literal)
    (literal)
    (literal)))

================================================================================
List with for
================================================================================

[for x in items: x]

--------------------------------------------------------------------------------

(source_file
  (list
    (list_for
      (identifier_binding (identifier))
      (identifier)
      (identifier))))

================================================================================
List with when
================================================================================

[when cond: x]

--------------------------------------------------------------------------------

(source_file
  (list
    (list_when
      (identifier)
      (identifier))))

================================================================================
List splat
================================================================================

[...xs]

--------------------------------------------------------------------------------

(source_file
  (list
    (list_splat
      (identifier))))

================================================================================
Empty map
================================================================================

{}

--------------------------------------------------------------------------------

(source_file
  (map))

================================================================================
Map with entries
================================================================================

{a: 1, b: 2}

--------------------------------------------------------------------------------

(source_file
  (map
    (map_entry
      (map_key_ident)
      (literal))
    (map_entry
      (map_key_ident)
      (literal))))

================================================================================
Map with hyphenated key
================================================================================

{my-key: true}

--------------------------------------------------------------------------------

(source_file
  (map
    (map_entry
      (map_key_ident)
      (literal))))

================================================================================
Map multiline string
================================================================================

{
  key:: some text here
}

--------------------------------------------------------------------------------

(source_file
  (map
    (map_entry
      (map_key_ident)
      (multistring))))

================================================================================
Map splat
================================================================================

{...base, extra: 1}

--------------------------------------------------------------------------------

(source_file
  (map
    (map_splat
      (identifier))
    (map_entry
      (map_key_ident)
      (literal))))

================================================================================
Binary operators
================================================================================

a + b * c

--------------------------------------------------------------------------------

(source_file
  (binary_expr_add
    (identifier)
    (binary_expr_mul
      (identifier)
      (identifier))))

================================================================================
Power operator (right-associative)
================================================================================

a ^ b ^ c

--------------------------------------------------------------------------------

(source_file
  (binary_expr_pow
    (identifier)
    (binary_expr_pow
      (identifier)
      (identifier))))

================================================================================
Unary not
================================================================================

not true

--------------------------------------------------------------------------------

(source_file
  (unary_expr
    (literal)))

================================================================================
Dot access
================================================================================

obj.field

--------------------------------------------------------------------------------

(source_file
  (dot_expr
    (identifier)
    (identifier)))

================================================================================
Index access
================================================================================

arr[0]

--------------------------------------------------------------------------------

(source_file
  (index_expr
    (identifier)
    (literal)))

================================================================================
Function call
================================================================================

f(x, y)

--------------------------------------------------------------------------------

(source_file
  (call_expr
    (identifier)
    (identifier)
    (identifier)))

================================================================================
Keyword argument
================================================================================

f(x: 1)

--------------------------------------------------------------------------------

(source_file
  (call_expr
    (identifier)
    (arg_keyword
      (identifier)
      (literal))))

================================================================================
Import statement
================================================================================

import "other.gold" as other
other

--------------------------------------------------------------------------------

(source_file
  (import_statement
    (string
      (string_raw))
    (identifier_binding (identifier)))
  (identifier))

================================================================================
List pattern binding
================================================================================

let [a, b] = pair in a + b

--------------------------------------------------------------------------------

(source_file
  (let_expr
    (list_pattern_binding
      (list_binding_entry
        (identifier_binding (identifier)))
      (list_binding_entry
        (identifier_binding (identifier))))
    (identifier)
    (binary_expr_add
      (identifier)
      (identifier))))
